fix: Reposiciona ícones para o pé da imagem em mobile, restaurando align-items: flex-end e ajustando bottom para 0px

--- a/style.css
+++ b/style.css
@@ -146,7 +146,14 @@ body {
     }
 
     .main-content-wrapper {
+        align-items: flex-end; /* Alinha o conteúdo à parte inferior */
         background-color: transparent; /* Remove a película escura */
+    }
+
+    .icon-container-left,
+    .icon-container-right {
+        position: absolute;
+        bottom: 0px; /* Posiciona os ícones na parte inferior */
     }
 
     .icon-item {
